--- a/Jquery/css/css images.css
+++ b/Jquery/css/css images.css
@@ -1,2 +1,15 @@
-p { display: none;
+.colon-1 p { display: none;
+}
+img {
+    width: 120px;
+    height: 100px;
+}
+
+img:first-child {
+    width : 500px;
+    height: 350px;
+}
+
+.images p {
+    display: none;
 }
